# hotbar

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  app.tsx  build.sh  hotbar  hotbar.js  run.sh
.claude/: settings.json
config/: default.toml
crates/hotbar-common/: Cargo.toml
crates/hotbar-common/src/: intern.rs  lib.rs  protocol.rs  schema.rs  trace_db.rs  types.rs
crates/hotbar-daemon/: Cargo.toml
crates/hotbar-daemon/src/: db.rs  inference.rs  ipc.rs  lib.rs  plugin.rs  search.rs  state.rs  watcher.rs  write_behind.rs
crates/hotbar-daemon/src/ingest/: claude.rs  codex.rs  dirscan.rs  mod.rs  xbel.rs
crates/hotbar-panel/: Cargo.toml
crates/hotbar-panel/shaders/: chrome.wgsl  chrome_heat.wgsl  flames.wgsl  heat_glow.wgsl  starburst.wgsl
crates/hotbar-panel/src/: anim.rs  app.rs  config.rs  dispatch.rs  gpu.rs  keybinds.rs  lib.rs  main.rs  sctk_shell.rs  theme.rs
crates/hotbar-panel/src/gpu/: chrome.rs  flames.rs  heat_glow.rs  starburst.rs
crates/hotbar-panel/src/widgets/: context_menu.rs  filter_bar.rs  logo.rs  mod.rs  pit_stop.rs  search_bar.rs  spinner.rs  summary.rs  toast.rs  torch.rs
docs/: animation-design.md  gpu-specialist-plan.md  optimization.md
services/: hotfiles.ts
styles/: style.scss
systemd/: hotbar.service
tools/: trace-viewer.py  trace-viewer.sh
widgets/: Panel.tsx
