[workspace]
resolver = "2"
members = [
    "crates/hotbar-common",
    "crates/hotbar-daemon",
    "crates/hotbar-panel",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
