[package]
name = "hotbar-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["registry"] }
rusqlite = { version = "0.32", features = ["bundled-full"] }

[dev-dependencies]
tempfile = "3"
