[package]
name = "hotbar-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hotbar-common = { path = "../hotbar-common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled-full"] }
notify = "7"
directories = "5"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
